[package]
name = "EXPscdc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "EXPscdc"
path = "src/main.rs"

[dependencies]
env_logger = "0.10"
log = "0.4"
clap = { version = "4.5", features = [ "cargo", "derive", "env" ] }
clap_complete = "4.5"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
flate2 = { version = "1.0.34" }
nix = { version = "0.29.0", features = [ "process" ]}

[profile.release]
strip = true
